# fast_do_zero

./: README.md  pyproject.toml
src/fast_do_zero/: app.py  schemas.py
tests/: test_app.py
